# app_agendamento_backend

./: .env
fast_agend/: .coverage  README.md  alembic.ini  docker-compose.yml  pyproject.toml
fast_agend/alembic/: env.py
fast_agend/alembic/versions/: 0e4e84d6fc1e_create_users_table.py  3ded5a969fb4_initial_schema.py  6106833dd309_initial_schema.py  6196e4b4cb13_create_users_table.py  7b3a0d718c00_create_users_role.py  853b8be0b475_create_full_database.py  a54173182008_create_users_table.py  b1dc2663e4b1_initial_database.py  bb5538ebc149_create_users_table.py  be31314b29dc_initial_schema.py  dcb952de8f0a_create_users_table.py  f2ae8a61e38f_create_users_table.py
fast_agend/fast_agend/: app.py  models.py  schemas.py  utils.py
fast_agend/fast_agend/core/: config.py  database.py  deps.py  logging_config.py
fast_agend/fast_agend/exceptions/: user_exceptions.py
fast_agend/fast_agend/repositories/: availability_repository.py  establishment_repository.py  professional_repository.py  scheduling_repository.py  service_repository.py  user_repository.py  verification_token_repository.py
fast_agend/fast_agend/routes/: auth.py  availability.py  establishment.py  professional.py  scheduling.py  services.py  user.py
fast_agend/fast_agend/security/: password.py
fast_agend/fast_agend/services/: auth_service.py  availability_service.py  email_service.py  establishment_service.py  professional_service.py  scheduling_service.py  services_service.py  slot_service.py  user_service.py
fast_agend/tests/: conftest.py  test_DB.py  test_app.py
